--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,22 @@
 # meta/main.yml
 # Author: iambryancs
 ---
+galaxy_info:
+  author: Bryan CS
+  description: Webtatic repo for RHEL/CentOS.
+  company: "PowerStormTech"
+  license: "license (MIT)"
+  min_ansible_version: 1.8
+  github_branch: master
+  platforms:
+  - name: EL
+   versions:   
+   - 5
+   - 6
+   - 7
+  galaxy_tags:
+    - webtatic
+    - webtatic-repo
+    - repository
 dependencies:
   - role: geerlingguy.repo-epel
