--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 # Author: iambryancs
 ---
 galaxy_info:
-  author: Bryan CS
+  author: "Bryan CS"
   description: Webtatic repo for RHEL/CentOS.
   company: "PowerStormTech"
   license: "license (MIT)"
