--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,5 +5,5 @@
   yum:
     name: "{{ item.url }}"
     state: present
-  when: ansible_distribution_major_version == '{{ item.version }}'
+  when: ansible_distribution_major_version == "{{ item.version }}"
   with_items: "{{ repos }}"
